// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test cases for multiple conatiner header Multiple containers/Container not visible 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main containerNameCard StyledProps--padding-medium StyledProps--background-primary1"
  >
    <div
      class="StyledProps--font StyledProps--main"
    >
      <span
        class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-grey800 StyledProps--font-variation-body2"
      >
        ce.recommendation.detailsPage.containerHeader
      </span>
      <span
        class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-grey800 StyledProps--font-variation-body"
      >
        Test Container
      </span>
    </div>
    <span
      class="bp3-icon bp3-icon-caret-down StyledProps--main toggleContainerIcon StyledProps--color StyledProps--color-primary5"
      icon="caret-down"
    >
      <svg
        data-icon="caret-down"
        height="18"
        viewBox="0 0 16 16"
        width="18"
      >
        <desc>
          caret-down
        </desc>
        <path
          d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`test cases for multiple conatiner header Multiple containers/Container visible 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main containerNameCard StyledProps--padding-medium StyledProps--background-primary1"
  >
    <div
      class="StyledProps--font StyledProps--main"
    >
      <span
        class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-grey800 StyledProps--font-variation-body2"
      >
        ce.recommendation.detailsPage.containerHeader
      </span>
      <span
        class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-grey800 StyledProps--font-variation-body"
      >
        Test Container
      </span>
    </div>
    <span
      class="bp3-icon bp3-icon-caret-up StyledProps--main toggleContainerIcon StyledProps--color StyledProps--color-primary5"
      icon="caret-up"
    >
      <svg
        data-icon="caret-up"
        height="18"
        viewBox="0 0 16 16"
        width="18"
      >
        <desc>
          caret-up
        </desc>
        <path
          d="M11.87 9.17s.01 0 0 0l-3.5-4C8.28 5.07 8.15 5 8 5s-.28.07-.37.17l-3.5 4a.495.495 0 00.37.83h7a.495.495 0 00.37-.83z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`test cases for multiple conatiner header Single container/Container always visible 1`] = `<div />`;

exports[`test cases for multiple conatiner header Single container/Container not visible 1`] = `<div />`;
